<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dip"
    android:descendantFocusability="blocksDescendants">

    <RelativeLayout
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="60dip"
        android:layout_marginRight="60dip">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dip"
            android:layout_marginStart="15dip"
            android:layout_marginTop="6dip"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/task_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/task_title"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/task_title"
            android:layout_toRightOf="@+id/task_title"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/description" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/description"
            android:layout_marginLeft="15dip"
            android:layout_marginStart="15dip"
            android:layout_marginTop="6dip"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/status" />

        <TextView
            android:id="@+id/task_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/status"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/time" />
    </RelativeLayout>

    <Button
        android:id="@+id/next"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/task_list"
        android:layout_toStartOf="@id/task_list"
        android:background="@drawable/next" />

</RelativeLayout>