<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:enabled="false"
        android:text="@string/hello"
        android:textColor="#ffffff" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账户:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_edit_text_bg"
            android:ems="8"
            android:hint="请输入账户"
            android:singleLine="true"
            android:textColorHint="#AAAAAA" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="密码:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/PWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_edit_text_bg"
            android:ems="8"
            android:hint="请输入密码"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:textColorHint="#AAAAAA" />

    </TableRow>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/duty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="执勤" />

        <RadioButton
            android:id="@+id/office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="办事" />

        <RadioButton
            android:id="@+id/Distribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分配" />
    </RadioGroup>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginStart="20dip"
            android:background="@drawable/button_style"
            android:text="@string/back"
            android:textColor="#ffffff" />
    </TableRow>

</RelativeLayout>
